with jdbc and jpa repositories(4)